--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: image_preview_carousel
-description: "A new Flutter package project."
+description: "A Flutter package that provides a synchronized image carousel with a thumbnail gallery."
 version: 0.0.1
 homepage: https://github.com/CevinWays/image_preview_carousel
 repository: https://github.com/CevinWays/image_preview_carousel
